src/test/deca/context/valid/created/objet/class_name.deca
// Description :
//     nom de classe 
//
// Resultats :
// ok

class Int {
     int x;

}
