src/test/deca/context/invalid/created/objet/double_def.deca
// Description:
//    double definition de classe
//Resultat :
//    Ligne 10 : double definition de classe

class A {
     int x ;

}
class A {
    int y ;
}